--- a/mybrary/Base.lproj/Main.storyboard
+++ b/mybrary/Base.lproj/Main.storyboard
@@ -18,15 +18,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o9n-id-RkZ">
-                                <rect key="frame" x="0.0" y="64" width="320" height="509"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                             </mapView>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhh-MV-RPM">
+                                <rect key="frame" x="0.0" y="519" width="320" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <tabBarItem title="Profile" id="sDS-W4-pci"/>
+                                    <tabBarItem title="Mybrary" image="my_books" id="Wf3-39-LAN"/>
+                                </items>
+                            </tabBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="o9n-id-RkZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="0ls-gD-bGX"/>
-                            <constraint firstItem="o9n-id-RkZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="TFg-cg-Wcm"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o9n-id-RkZ" secondAttribute="bottom" constant="-5" id="aqg-Bc-mhB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="o9n-id-RkZ" secondAttribute="trailing" constant="-16" id="ljM-RN-qQb"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o9n-id-RkZ" secondAttribute="bottom" constant="49" id="8Mj-Bu-k7L"/>
+                            <constraint firstItem="xhh-MV-RPM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="H2j-3X-KL5"/>
+                            <constraint firstItem="o9n-id-RkZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="HZh-A6-NuC"/>
+                            <constraint firstItem="o9n-id-RkZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="JHb-DP-Evp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xhh-MV-RPM" secondAttribute="trailing" constant="-16" id="Lhj-Mn-jM8"/>
+                            <constraint firstItem="xhh-MV-RPM" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="fpC-7p-p7b"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="o9n-id-RkZ" secondAttribute="trailing" constant="-16" id="lpg-d7-9Oo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xhh-MV-RPM" secondAttribute="bottom" id="wIe-4f-Cu2"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yAv-iT-cNT">
@@ -89,7 +101,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jm1-oT-ldM">
-                                <rect key="frame" x="137" y="283" width="49" height="30"/>
+                                <rect key="frame" x="142" y="501" width="49" height="30"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -97,6 +109,18 @@
                                     <action selector="submtBookInstance:" destination="C01-mu-fAq" eventType="touchUpInside" id="bnL-3f-ZVE"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfO-cl-LJA" userLabel="Name">
+                                <rect key="frame" x="16" y="91" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FgZ-an-6i1" userLabel="ConditionPicker">
+                                <rect key="frame" x="1" y="120" width="320" height="162"/>
+                            </pickerView>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="MVS-ec-Fs3" userLabel="PricePicker">
+                                <rect key="frame" x="101" y="290" width="118" height="31"/>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -153,14 +177,63 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="oqv-9q-pxG"/>
+                        <segue destination="8Fn-a7-3KI" kind="relationship" relationship="rootViewController" id="MwF-fQ-AKT"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r4a-bp-5Id" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-364" y="341"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="P3F-RT-2V9">
+            <objects>
+                <viewController id="8Fn-a7-3KI" userLabel="Login View Controller" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EfO-oJ-RtH"/>
+                        <viewControllerLayoutGuide type="bottom" id="lRc-ZM-GwU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GM1-Gu-KMQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ted-fB-roI">
+                                <rect key="frame" x="16" y="153" width="288" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr8-LX-dRL">
+                                <rect key="frame" x="16" y="191" width="288" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6T-He-MRg">
+                                <rect key="frame" x="137" y="229" width="38" height="30"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginPressed:" destination="8Fn-a7-3KI" eventType="touchUpInside" id="HhV-7y-BZe"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JO0-8v-8ti"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="passwordField" destination="kr8-LX-dRL" id="96X-WI-8Gf"/>
+                        <outlet property="userNameField" destination="ted-fB-roI" id="z4V-xE-F2u"/>
+                        <segue destination="BYZ-38-t0r" kind="push" identifier="mainPage" id="HCd-Fo-Xhe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oee-Xu-SMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="162" y="341"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="my_books" width="72" height="70"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
