--- a/mybrary/Base.lproj/Main.storyboard
+++ b/mybrary/Base.lproj/Main.storyboard
@@ -17,9 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o9n-id-RkZ">
-                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
-                            </mapView>
                             <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhh-MV-RPM">
                                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -28,29 +25,26 @@
                                     <tabBarItem title="Mybrary" image="my_books" id="Wf3-39-LAN"/>
                                 </items>
                             </tabBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o9n-id-RkZ">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o9n-id-RkZ" secondAttribute="bottom" constant="49" id="8Mj-Bu-k7L"/>
+                            <constraint firstItem="o9n-id-RkZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="8gE-Fr-tyP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="o9n-id-RkZ" secondAttribute="trailing" constant="-16" id="GQX-8l-Yd5"/>
                             <constraint firstItem="xhh-MV-RPM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="H2j-3X-KL5"/>
-                            <constraint firstItem="o9n-id-RkZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="HZh-A6-NuC"/>
-                            <constraint firstItem="o9n-id-RkZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="JHb-DP-Evp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xhh-MV-RPM" secondAttribute="trailing" constant="-16" id="Lhj-Mn-jM8"/>
+                            <constraint firstItem="o9n-id-RkZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="bvo-gc-eLM"/>
                             <constraint firstItem="xhh-MV-RPM" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="fpC-7p-p7b"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="o9n-id-RkZ" secondAttribute="trailing" constant="-16" id="lpg-d7-9Oo"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xhh-MV-RPM" secondAttribute="bottom" id="wIe-4f-Cu2"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="yAv-iT-cNT">
-                        <barButtonItem key="rightBarButtonItem" title="Post" id="wCP-Z7-Svl">
-                            <connections>
-                                <action selector="postButtonPressed:" destination="BYZ-38-t0r" id="xrS-uA-zd1"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="yAv-iT-cNT"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="mapView" destination="o9n-id-RkZ" id="StX-n6-Hmj"/>
-                        <outlet property="postButton" destination="wCP-Z7-Svl" id="PU4-hQ-gt8"/>
                         <segue destination="UDy-MB-cU7" kind="push" identifier="showScanner" id="ECF-e5-fMD"/>
                     </connections>
                 </viewController>
@@ -116,17 +110,23 @@
                         <viewControllerLayoutGuide type="bottom" id="tIT-ZV-LyF"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Daf-iO-avm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x2y-fu-7Qw">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2y-fu-7Qw">
                                 <rect key="frame" x="2" y="64" width="318" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="leading" secondItem="Daf-iO-avm" secondAttribute="leadingMargin" constant="-14" id="GNP-TS-MAm"/>
+                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="top" secondItem="kgR-4j-5OO" secondAttribute="bottom" id="QeK-uG-3LY"/>
+                            <constraint firstItem="tIT-ZV-LyF" firstAttribute="top" secondItem="x2y-fu-7Qw" secondAttribute="bottom" id="Usl-XM-Tq2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="x2y-fu-7Qw" secondAttribute="trailing" constant="-16" id="bR9-OY-Tyq"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Mybrary" id="r7l-TC-vFX"/>
+                    <navigationItem key="navigationItem" id="xKR-Lw-Eqf"/>
                     <connections>
                         <outlet property="scannerView" destination="x2y-fu-7Qw" id="Etx-FI-wEw"/>
                         <segue destination="wqz-VG-yWJ" kind="push" identifier="NewBook" id="tcI-oB-tx8"/>
@@ -146,11 +146,26 @@
                         <viewControllerLayoutGuide type="bottom" id="oEU-A2-det"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3vP-Cy-KgU">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfO-cl-LJA" userLabel="Name">
+                                <rect key="frame" x="16" y="91" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvb-Y0-a0i">
+                                <rect key="frame" x="139" y="107" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vdo-aS-pLr">
+                                <rect key="frame" x="0.0" y="177" width="320" height="162"/>
+                            </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jm1-oT-ldM">
-                                <rect key="frame" x="142" y="501" width="49" height="30"/>
+                                <rect key="frame" x="136" y="370" width="49" height="30"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -158,22 +173,14 @@
                                     <action selector="submtBookInstance:" destination="C01-mu-fAq" eventType="touchUpInside" id="bnL-3f-ZVE"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfO-cl-LJA" userLabel="Name">
-                                <rect key="frame" x="16" y="91" width="288" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FgZ-an-6i1" userLabel="ConditionPicker">
-                                <rect key="frame" x="1" y="120" width="320" height="162"/>
-                            </pickerView>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="MVS-ec-Fs3" userLabel="PricePicker">
-                                <rect key="frame" x="101" y="290" width="118" height="31"/>
-                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="AaL-Js-Oa0"/>
+                    <connections>
+                        <outlet property="bookNameLabel" destination="uvb-Y0-a0i" id="Nx8-Na-8QC"/>
+                        <outlet property="giveOptions" destination="vdo-aS-pLr" id="Wvv-fK-qNr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIM-iA-Sqp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -188,7 +195,7 @@
                         <viewControllerLayoutGuide type="bottom" id="PVS-nw-ptE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="oWI-tF-kOE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Book Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tj7-Cm-4Qf">
@@ -248,7 +255,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ted-fB-roI">
                                 <rect key="frame" x="16" y="153" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr8-LX-dRL">
                                 <rect key="frame" x="16" y="191" width="288" height="30"/>
@@ -265,7 +272,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJ6-3L-Lyb">
-                                <rect key="frame" x="137" y="293" width="55" height="30"/>
+                                <rect key="frame" x="129" y="296" width="55" height="30"/>
                                 <state key="normal" title="Sign Up">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -299,6 +306,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="lDr-Uj-mUk"/>
+        <segue reference="NUW-kR-QHN"/>
     </inferredMetricsTieBreakers>
 </document>
